# VE482

./: README.md
Homework/h1/: 1.txt  2.txt  README.md  ZhangYichi_VE482_h1.sh  ZhangYichi_VE482_h1.tex  ZhangYichi_VE482_h1_516370910260.tar
Homework/h2/: ZhangYichi_VE482_h2.tex
Homework/h3/: ZhangYichi_VE482_h3.tex  dec_int.txt  ex3_ll.c  ex3_ll.h  ex3_sorter  ex3_sorter.c  ex3_sorter.h  inc_int.txt  main.c  rand_int.txt
Homework/h4/: ZhangYichi_VE482_h4.aux  ZhangYichi_VE482_h4.tex  ex3_2.sh
Homework/h5/: ZhangYichi_VE482_h5.tex
Homework/h6/: ZhangYichi_VE482_h6.tex
Homework/h7/: ZhangYichi_VE482_h7.tex
Homework/h8/: ZhangYichi_VE482_h8.tar  ZhangYichi_VE482_h8.tex
Labs/l1/: ZhangYichi_VE482_l1.tex
Labs/l2/: 516370910260.pub  ZhangYichi_VE482_l2.tex  aqi.sh  net.sh  ssh-key.tar
Labs/l3/: ZhangYichi_VE482_l3.tex
Labs/l4/: ZhangYichi_VE482_l4.tex
Labs/l4/code/: CMakeLists.txt  README.md  api.c  api.h  cli.c  code.tar  correct.tar  dlist.c  interface.c  interface.h  list.c  list.h  test.sh  user.c
Labs/l4/code/correct/: dlist.c
Labs/l5/: ZhangYichi_VE482_l5.tex
Labs/l6/: VE482_Team1_l6.aux  VE482_Team1_l6.nav  VE482_Team1_l6.tex  VE482_Team1_l6.toc  VE482_Team1_l6.vrb
Labs/l7/: case1.in  case1.out  case10.in  case10.out  case11.in  case11.out  case12.in  case12.out  case13.in  case13.out  case14.in  case14.out  case15.in  case15.out  case2.in  case2.out  case3.in  case3.out  case4.in  case4.out  case5.in  case5.out  case6.in  case6.out  case7.in  case7.out  case8.in  case8.out  case9.in  case9.out  cases.py  dlist.c  (+3 more)
challenge/: README.md
(+172 files in other folders)
